[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
bson = { version = "2.10.0", features = ["chrono-0_4"] }
chrono = { version = "0.4.38", features = ["serde"] }
derive_more = "0.99.17"
dotenv = "0.15.0"
env_logger = "0.11.3"
log = "0.4.21"
mongodb = "2.8.2"
serde = { version = "1.0.198", features = ["derive"] }
tokio = "1.37.0"
